--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.neo4j.uri=bolt://localhost:8687
+spring.data.neo4j.database=movies
+
+spring.rsocket.server.mapping-path=/rsocket
+spring.rsocket.server.transport=websocket
 
